--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ listenForUrlChangesMobileMenu()
                 <div class="review-details">
                   <h1 class="review-author1"><span>Pablo Martín</span></h1>
                   <label class="review-position">
-                    <span>Founding Partner - 121 Group</span>
+                    <span>Founding Partner</span>
                   </label>
                 </div>
               </div>
@@ -461,7 +461,7 @@ listenForUrlChangesMobileMenu()
                 />
                 <div class="review-details">
                   <h1 class="review-author1"><span>Tyler Johnson</span></h1>
-                  <label class="review-position"><span>Marketing Executive - Abbott</span></label>
+                  <label class="review-position"><span>Marketing Executive</span></label>
                 </div>
               </div>
             </main>
