--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <title>Vidnobi</title>
 
-    <link rel="icon" href="/public/Branding/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/public/Branding/favicon.png">
     <meta name="description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
     <meta name="keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
     <meta name="author" content="Elio">
