Update and rename countdownn.html to countdown.html

--- a/countdown.html
+++ b/countdown.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="english">
   <head>
-    <title>exported project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta property="twitter:card" content="summary_large_image" />
+    <link rel="shortcut icon" href="/public/Branding/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/Branding/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/Branding/favicon.png">
+    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta http-equix="X-UA-Compatible" content="chrome=1">
+    
+    <title>Vidnobi</title>
+
+    <link rel="icon" type="image/x-icon" href="/public/Branding/favicon.png">
+    <meta name="description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
+    <meta name="keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
+    <meta name="author" content="Elio">
+    <meta name="theme-color" content="#0e0b14">
+    <meta property="og:title" content="Vidnobi">
+    <meta property="og:description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
+    <meta property="og:keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vidnobi.io">
+    <meta property="og:image" content="/public/Branding/favicon.png">
+    <meta property="og:site_name" content="Vidnobi">
+    <meta property="og:locale" content="en_US">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vidnobi">
+    <meta name="twitter:description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
+    <meta name="twitter:image" content="https://vidnobi.io">
+    <meta name="twitter:image:alt" content="Vidnobi">
 
     <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
