--- a/countdown.html
+++ b/countdown.html
@@ -68,10 +68,9 @@
   </head>
   <body>
     <div>
-      <link href="./countdown.css" rel="stylesheet" />
-
-      <div class="countdown-container">
-        <div class="countdown-countdown">
+  <link href="./countdown.css" rel="stylesheet" />
+  <div class="countdown-container">
+    <div class="countdown-countdown">
       <img
         src="/bottomimage333-wtxj.svg"
         alt="bottomimage333"
@@ -92,20 +91,17 @@
         alt="rocket2023"
         class="countdown-rocket"
       />
-          <div class="countdown-group4">
-            <span class="countdown-text">
-              <span>Ready to launch in...</span>
-            </span>
-            <div class="countdown-group2">
-              <span class="countdown-text2">30 : 12 : 44 : 28</span>
-              <span class="countdown-text3">Days</span>
-              <span class="countdown-text4">Hours</span>
-              <span class="countdown-text5">Minutes</span>
-              <span class="countdown-text6">Seconds</span>
-            </div>
-          </div>
+      <div class="countdown-group4">
+        <span class="countdown-text"><span>Ready to launch in...</span></span>
+        <div class="countdown-group2">
+          <span class="countdown-text2">30 : 12 : 44 : 28</span>
+          <span class="countdown-text3">Days</span>
+          <span class="countdown-text4">Hours</span>
+          <span class="countdown-text5">Minutes</span>
+          <span class="countdown-text6">Seconds</span>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</div>
 </html>
