--- a/countdown.html
+++ b/countdown.html
@@ -72,22 +72,22 @@
   <div class="countdown-container">
     <div class="countdown-countdown">
       <img
-        src="/bottomimage333-wtxj.svg"
+        src="/public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage"
       />
       <img
-        src="/bottomimage333-wtxj.svg"
+        src="/public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage1"
       />
       <img
-        src="/topimage296-3tap.svg"
+        src="/public/Icons/topimage296-3tap.svg"
         alt="topimage296"
         class="countdown-topimage"
       />
       <img
-        src="/rocket2023-wpw.svg"
+        src="/public/Icons/rocket2023-wpw.svg"
         alt="rocket2023"
         class="countdown-rocket"
       />
