--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
             </div>
             <div class="get-started navbar-get-started">
-              <span class="navbar-text"><a href="#soon">Coming Soon</a></span>
+              <span class="navbar-text"><a href="/countdown">Coming Soon</a></span>
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
@@ -193,7 +193,7 @@ listenForUrlChangesMobileMenu()
             </header>
             <div class="home-buttons">
               <div class="home-get-started button">
-                <span class="home-text">Coming Soon</span>
+                <span class="home-text"><a href="/countdown">Coming Soon</a></span>
               </div>
               <div class="home-get-started1 button">
                 <span class="home-text01"><a href=#services>View features</a></span>
