--- a/countdown.html
+++ b/countdown.html
@@ -93,8 +93,8 @@
       />
       <div class="countdown-group4">
         <span class="countdown-text"><span>Ready to launch in...</span></span>
-        <div class="countdown-group2">
-          <span class="countdown-text2">30 : 12 : 44 : 28</span>
+        <div id="timer" class="countdown-group2">
+          <span class="countdown-text2"><b id="d"></b> : <b id="h"></b> : <b id="m"></b> : <b id="s"></b></span>
           <span class="countdown-text3">Days</span>
           <span class="countdown-text4">Hours</span>
           <span class="countdown-text5">Minutes</span>
@@ -104,4 +104,6 @@
     </div>
   </div>
 </div>
+    <script type="text/javascript" src="/date.js"></script>
+  </body>
 </html>
