--- a/countdown.html
+++ b/countdown.html
@@ -95,12 +95,7 @@
         <span class="countdown-text"><span>Ready to launch in...</span></span>
         <div id="timer" class="countdown-group2">
           
-				<b id="d"></b> Days 
-				<b id="h"></b> Hours
-				<b id="m"></b> Minutes
-				<b id="s"></b> Seconds
-          
-          <span class="countdown-text2"><b id="d"></b> : <b id="h"></b> : <b id="m"></b> : <b id="s"></b></span>
+          <span class="countdown-text2"><b id="d"></b></span>
           <span class="countdown-text3">Days</span>
           <span class="countdown-text4">Hours</span>
           <span class="countdown-text5">Minutes</span>
