--- a/countdown.html
+++ b/countdown.html
@@ -95,7 +95,7 @@
         <span class="countdown-text"><span>Ready to launch in...</span></span>
         <div id="timer" class="countdown-group2">
           
-          <span class="countdown-text2"><b id="d"></b></span>
+          <span id="d" class="countdown-text2"></span>
           <span class="countdown-text3">Days</span>
           <span class="countdown-text4">Hours</span>
           <span class="countdown-text5">Minutes</span>
