--- a/countdown.html
+++ b/countdown.html
@@ -86,11 +86,6 @@
         alt="topimage296"
         class="countdown-topimage"
       />
-      <!--img
-        src="/public/Icons/rocket2023-wpw.svg"
-        alt="rocket2023"
-        class="countdown-rocket"
-      /-->
       <div class="countdown-group4">
         <span class="countdown-text"><span>Ready to launch in...</span></span>
         <div id="timer" class="countdown-group2">
@@ -102,6 +97,11 @@
           <span class="countdown-text6">Seconds</span>
         </div>
       </div>
+      <img
+        alt="rocket2023"
+        src="/public/Icons/rocket2023-wpw.svg"
+        class="countdown-rocket"
+      />
     </div>
   </div>
 </div>
