--- a/countdown.html
+++ b/countdown.html
@@ -88,7 +88,7 @@
       />
       <div class="countdown-group4">
         <span class="countdown-text"><span>Ready to launch in...</span></span>
-        <div id="timer" class="countdown-group2">
+        <div id="timer" class="countdown-group2 countdown-root-class-name">
           
           <span id="d" class="countdown-text2"></span>
           <span class="countdown-text3">Days</span>
