--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
             </div>
             <div class="get-started navbar-get-started">
-              <span class="navbar-text"><a href="/countdown">Coming Soon</a></span>
+              <span class="navbar-text"><a href="/vidnobi/countdown">Coming Soon</a></span>
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
@@ -1429,7 +1429,7 @@ listenForUrlChangesMobileMenu()
               </div>
               <section class="home-copyright">
                 <span class="home-text48">
-                  © 2023 Bedroz. All Rights Reserved.
+                  © 2025 Webicco All Rights Reserved.
                 </span>
               </section>
             </main>
@@ -1458,7 +1458,7 @@ listenForUrlChangesMobileMenu()
             </main>
             <section class="home-copyright1">
               <span class="home-text53">
-                © 2023 Bedroz. All Rights Reserved.
+                © 2025 Webicco. All Rights Reserved.
               </span>
             </section>
           </div>
