--- a/countdown.html
+++ b/countdown.html
@@ -72,23 +72,23 @@
   <div class="countdown-container">
     <div class="countdown-countdown">
       <img
-        src="/public/Icons/bottomimage333-wtxj.svg"
+        src="./public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage"
       />
       <img
-        src="/public/Icons/bottomimage333-wtxj.svg"
+        src="./public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage1"
       />
       <img
-        src="/public/Icons/topimage296-3tap.svg"
+        src="./public/Icons/topimage296-3tap.svg"
         alt="topimage296"
         class="countdown-topimage"
       />
       <img
         alt="rocket2023"
-        src="/public/Icons/rocket2023-wpw.svg"
+        src="./public/Icons/rocket2023-wpw.svg"
         class="countdown-rocket"
       />
       <div class="countdown-group4">
@@ -103,6 +103,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/date.js"></script>
+    <script type="text/javascript" src="./date.js"></script>
   </body>
 </html>
