--- a/countdown.html
+++ b/countdown.html
@@ -64,31 +64,31 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div>
-  <link href="./countdown.css" rel="stylesheet" />
+  <link href="/countdown.css" rel="stylesheet" />
   <div class="countdown-container">
     <div class="countdown-countdown">
       <img
-        src="./public/Icons/bottomimage333-wtxj.svg"
+        src="/public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage"
       />
       <img
-        src="./public/Icons/bottomimage333-wtxj.svg"
+        src="/public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage1"
       />
       <img
-        src="./public/Icons/topimage296-3tap.svg"
+        src="/public/Icons/topimage296-3tap.svg"
         alt="topimage296"
         class="countdown-topimage"
       />
       <img
         alt="rocket2023"
-        src="./public/Icons/rocket2023-wpw.svg"
+        src="/public/Icons/rocket2023-wpw.svg"
         class="countdown-rocket"
       />
       <div class="countdown-group4">
@@ -103,6 +103,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="./date.js"></script>
+    <script type="text/javascript" src="/date.js"></script>
   </body>
 </html>
