--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div>
@@ -78,7 +78,7 @@
         type="text/javascript"
         src="https://unpkg.com/dangerous-html@0.1.12/dist/default/lib.umd.js"
       ></script>
-      <link href="/home.css" rel="stylesheet" />
+      <link href="./home.css" rel="stylesheet" />
       <div class="home-container">
         <nav class="navbar-navbar navbar-root-class-name">
           <img
@@ -193,7 +193,7 @@ listenForUrlChangesMobileMenu()
             </header>
             <div class="home-buttons">
               <div class="home-get-started button">
-                <span class="home-text"><a href="/countdown">Coming Soon</a></span>
+                <span class="home-text"><a href="/vidnobi/countdown">Coming Soon</a></span>
               </div>
               <div class="home-get-started1 button">
                 <span class="home-text01"><a href=#services>View features</a></span>
