--- a/countdown.html
+++ b/countdown.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="english">
   <head>
-    <link rel="shortcut icon" href="/public/Branding/favicon.png" type="image/x-icon" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/Branding/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/Branding/favicon.png">
+    <link rel="shortcut icon" href="./public/Branding/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/Branding/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/Branding/favicon.png">
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -13,7 +13,7 @@
     
     <title>Vidnobi</title>
 
-    <link rel="icon" type="image/x-icon" href="/public/Branding/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./public/Branding/favicon.png">
     <meta name="description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
     <meta name="keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
     <meta name="author" content="Elio">
@@ -23,7 +23,7 @@
     <meta property="og:keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vidnobi.io">
-    <meta property="og:image" content="/public/Branding/favicon.png">
+    <meta property="og:image" content="./public/Branding/favicon.png">
     <meta property="og:site_name" content="Vidnobi">
     <meta property="og:locale" content="en_US">
 
@@ -64,31 +64,31 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div>
-  <link href="/countdown.css" rel="stylesheet" />
+  <link href="./countdown.css" rel="stylesheet" />
   <div class="countdown-container">
     <div class="countdown-countdown">
       <img
-        src="/public/Icons/bottomimage333-wtxj.svg"
+        src="./public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage"
       />
       <img
-        src="/public/Icons/bottomimage333-wtxj.svg"
+        src="./public/Icons/bottomimage333-wtxj.svg"
         alt="bottomimage333"
         class="countdown-bottomimage1"
       />
       <img
-        src="/public/Icons/topimage296-3tap.svg"
+        src="./public/Icons/topimage296-3tap.svg"
         alt="topimage296"
         class="countdown-topimage"
       />
       <img
         alt="rocket2023"
-        src="/public/Icons/rocket2023-wpw.svg"
+        src="./public/Icons/rocket2023-wpw.svg"
         class="countdown-rocket"
       />
       <div class="countdown-group4">
@@ -103,6 +103,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/date.js"></script>
+    <script type="text/javascript" src="./date.js"></script>
   </body>
 </html>
