--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="/public/Branding/favicon.png" type="image/x-icon" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/Branding/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/Branding/favicon.png">
+    <link rel="shortcut icon" href="./public/Branding/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/Branding/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/Branding/favicon.png">
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -13,7 +13,7 @@
     
     <title>Vidnobi</title>
 
-    <link rel="icon" type="image/x-icon" href="/public/Branding/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./public/Branding/favicon.png">
     <meta name="description" content="We're on a mission to take your video to the next level, efficiently. Video production for founders and companies all over the globe.">
     <meta name="keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
     <meta name="author" content="Elio">
@@ -23,7 +23,7 @@
     <meta property="og:keywords" content="vidnobi, vid nobi, vidnobi.io, vidnobi .io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vidnobi.io">
-    <meta property="og:image" content="/public/Branding/favicon.png">
+    <meta property="og:image" content="./public/Branding/favicon.png">
     <meta property="og:site_name" content="Vidnobi">
     <meta property="og:locale" content="en_US">
 
